--- a/image-galery/src/styles/css/main.css
+++ b/image-galery/src/styles/css/main.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 16px;
   line-height: 1;
 }
@@ -37,8 +37,4 @@ a, a:visited {
 
 p {
   width: auto;
-}
-
-body p {
-  color: chartreuse;
 }
