--- a/image-galery/src/styles/scss/_defautStyle.scss
+++ b/image-galery/src/styles/scss/_defautStyle.scss
@@ -1,4 +1,4 @@
-body{font-family: Arial, sans-serif;font-size: 16px;line-height: 1;}
+body{font-family: 'Montserrat', sans-serif;font-size: 16px;line-height: 1;}
 *{padding: 0; margin: 0; border: 0;}
 *,*:before,*:after{-moz-box-sizing: border-box;-webkit-box-sizing: border-box;box-sizing: border-box;}
 input,button,textarea{font-family: inherit;}
@@ -8,6 +8,3 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;}
 a,a:visited{text-decoration: none;color:inherit}
 p{width: auto}
 
-body p {
-	color: chartreuse;
-}
