feat:added click on magnifying glass, added click on keypress enter for the input, added first random images and random pages on the click in index.js. Added favicon, wrapper img-galary in html. Update defaultStyle and body files scss

--- a/image-galery/src/styles/scss/_body.scss
+++ b/image-galery/src/styles/scss/_body.scss
@@ -11,3 +11,13 @@
 	justify-content: space-around;
 }
 
+.wrapper-img-galary {
+	display: inline-block;
+	overflow: hidden;
+}
+
+.img-galary {
+	cursor: pointer;
+	transition: 0.5s;
+}
+
