--- a/image-galery/src/styles/css/main.css
+++ b/image-galery/src/styles/css/main.css
@@ -45,17 +45,24 @@ p {
     width: 400px;
     height: 260px;
   }
+  .img-galary:hover {
+    transform: scale(1.05);
+  }
 }
 @media screen and (max-width: 1260px) {
   .img-galary {
     width: 500px;
-    height: auto;
+    height: 350px;
   }
 }
 @media screen and (max-width: 1040px) {
   .img-galary {
     width: 1000px;
     max-width: 100%;
+    height: auto;
+  }
+  .img-galary:hover {
+    transform: scale(1);
   }
 }
 header {
@@ -115,6 +122,16 @@ header {
   flex-wrap: wrap;
   gap: 20px 20px;
   justify-content: space-around;
+}
+
+.wrapper-img-galary {
+  display: inline-block;
+  overflow: hidden;
+}
+
+.img-galary {
+  cursor: pointer;
+  transition: 0.5s;
 }
 
 .footer__content {
