--- a/random-game/style.css
+++ b/random-game/style.css
@@ -21,3 +21,20 @@ p{width: auto}
 	background: url('img/player-top.png');
 	background-repeat: no-repeat;
 }
+
+.shot {
+	position: absolute;
+	width: 16px;
+	height: 16px;
+	background: url('img/bullet.png');
+	background-repeat: no-repeat;
+}
+
+.enemy {
+	position: absolute;
+	top: 500px;
+	width: 78px;
+	height: 77px;
+	background: url('img/enemy-right.png');
+	background-repeat: no-repeat;
+}
