--- a/random-game/style.css
+++ b/random-game/style.css
@@ -1,4 +1,4 @@
-body{font-family: 'Arial', sans-serif;font-size: 16px;line-height: 1;}
+body{font-family: 'Pixelify Sans', sans-serif;font-size: 16px;line-height: 1; font-weight: 400;}
 *{padding: 0; margin: 0; border: 0;}
 *,*:before,*:after{-moz-box-sizing: border-box;-webkit-box-sizing: border-box;box-sizing: border-box;}
 input,button,textarea{font-family: inherit;}
@@ -32,9 +32,28 @@ p{width: auto}
 
 .enemy {
 	position: absolute;
-	top: 500px;
 	width: 78px;
 	height: 77px;
 	background: url('img/enemy-right.png');
 	background-repeat: no-repeat;
+}
+
+.game__info {
+	position: absolute;
+	font-size: 25px;
+	top: 20px;
+	left: 20px;
+	z-index: 10;
+	width: 300px;
+	padding: 10px;
+	border: 3px solid black;
+}
+
+.game__name {
+	line-height: 1.4;
+}
+
+.counter {
+	display: inline-block;
+	margin-left: 10px;
 }
