--- a/random-game/style.css
+++ b/random-game/style.css
@@ -8,6 +8,10 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;}
 a,a:visited{text-decoration: none;color:inherit}
 p{width: auto}
 
+.noneDisplay {
+	display: none;
+}
+
 .game-zone {
 	position: relative;
 	min-height: 100vh;
@@ -56,4 +60,53 @@ p{width: auto}
 .counter {
 	display: inline-block;
 	margin-left: 10px;
+}
+
+.game__heart {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	z-index: 10;
+}
+
+.game__heart img {
+	width: 50px;
+}
+
+.game__over {
+	position: absolute;
+	text-align: center;
+	top:50%;
+	left:50%;
+	transform:translate(-50%, -50%);
+	font-size: 100px;
+}
+
+.game__over p {
+	animation-name: flashing;
+	Animation-iteration-count: infinite;
+	animation-duration: 4s;
+}
+
+.game__over button {
+	background: none;
+	/* animation-name: flashing; */
+	/* animation-duration: 2s; */
+	font-size: 40px;
+	border: 5px solid black;
+	padding: 15px;
+}
+
+@keyframes flashing {
+	0% {
+		opacity: 1;
+	}
+
+	50% {
+		opacity: 0;
+	}
+
+	100% {
+		opacity: 1;
+	}
 }
