feat: added class shotEnemy in style.css, added interval bullet enemy, hit enemy in player and enemy shot in player, added clear interval in function gameOver and delete bullet in function nextStart

--- a/random-game/style.css
+++ b/random-game/style.css
@@ -34,6 +34,14 @@ p{width: auto}
 	background-repeat: no-repeat;
 }
 
+.shotEnemy {
+	position: absolute;
+	width: 16px;
+	height: 16px;
+	background: url('img/bullet.png');
+	background-repeat: no-repeat;
+}
+
 .enemy {
 	position: absolute;
 	width: 78px;
