--- a/random-game/style.css
+++ b/random-game/style.css
@@ -1,4 +1,4 @@
-body{font-family: 'Pixelify Sans', sans-serif;font-size: 16px;line-height: 1; font-weight: 400;}
+body{font-family: 'Pixelify Sans', sans-serif;font-size: 16px;line-height: 1; font-weight: 400;background: url('img/back.png');}
 *{padding: 0; margin: 0; border: 0;}
 *,*:before,*:after{-moz-box-sizing: border-box;-webkit-box-sizing: border-box;box-sizing: border-box;}
 input,button,textarea{font-family: inherit;}
@@ -14,8 +14,97 @@ p{width: auto}
 
 .game-zone {
 	position: relative;
+	overflow: hidden;
 	min-height: 100vh;
 	background: url('img/back.png');
+}
+
+/* form */
+.game__start {
+	padding: 35px;
+	border: 5px solid black;
+	position: absolute;
+	text-align: center;
+	top:50%;
+	left:50%;
+	transform:translate(-50%, -50%);
+}
+
+.game__name__form {
+	font-size: 100px;
+	font-weight: 400;
+	margin-bottom: 40px;
+}
+
+.game__task {
+	font-size: 20px;
+	margin-bottom: 10px;
+}
+
+.game__direction {
+	font-size: 40px;
+}
+
+.game__direction img {
+	width: 35px;
+}
+
+.game__shotKeydown {
+	font-size: 40px;
+}
+
+.game__userName {
+	display: inline-block;
+	margin-right: 15px;
+	font-size: 30px;
+}
+
+.game__shotKeydown b {
+	margin-left: 20px;
+}
+
+.input-name {
+	font-size: 24px;
+	margin-top: 20px;
+}
+
+.game__title__levels {
+	margin-top: 40px;
+	font-size: 32px;
+}
+
+.game__levels {
+	display: flex;
+	font-size: 28px;
+	margin: 15px 0 40px 0;
+	justify-content: space-around;
+}
+
+.levels__item {
+	cursor: pointer;
+	border: 3px solid black;
+	padding: 10px;
+	border-radius: 5px;
+	transition: 0.2s;
+}
+
+.levels__item:hover {
+	color: rgb(130, 1, 1);
+}
+
+.activeLevel {
+	color: rgb(130, 1, 1);
+}
+
+.submit-name {
+	display: block;
+	margin: 0 auto;
+	width: 250px;
+	font-size: 32px;
+	background: none;
+	border: 5px solid black;
+	padding: 10px;
+	border-radius: 5px;
 }
 
 .player {
@@ -56,7 +145,7 @@ p{width: auto}
 	top: 20px;
 	left: 20px;
 	z-index: 10;
-	width: 300px;
+	min-width: 300px;
 	padding: 10px;
 	border: 3px solid black;
 }
@@ -87,10 +176,11 @@ p{width: auto}
 	top:50%;
 	left:50%;
 	transform:translate(-50%, -50%);
-	font-size: 100px;
+	font-size: 80px;
 }
 
 .game__over p {
+	color: rgb(130, 1, 1);
 	animation-name: flashing;
 	Animation-iteration-count: infinite;
 	animation-duration: 4s;
@@ -98,11 +188,24 @@ p{width: auto}
 
 .game__over button {
 	background: none;
-	/* animation-name: flashing; */
-	/* animation-duration: 2s; */
 	font-size: 40px;
 	border: 5px solid black;
 	padding: 15px;
+}
+
+.tableCounter {
+	margin: 10px auto 20px;
+	border: 2px solid black;
+	font-size: 20px;
+}
+
+tbody {
+	height: 100px;
+
+}
+
+.tableCounter td {
+	padding: 5px 15px;
 }
 
 @keyframes flashing {
@@ -118,3 +221,33 @@ p{width: auto}
 		opacity: 1;
 	}
 }
+
+.footer__content {
+	display: flex;
+	margin-top: 25px;
+	font-size: 24px;
+	justify-content: center;
+	margin-bottom: 10px;
+}
+
+.footer__wrapper {
+	display: flex;
+	width: 100%;
+	justify-content: space-around;
+	align-items: center;
+}
+
+a .github {
+	color: #000;
+	font-size: 30px;
+	transition: 0.5s color;
+}
+
+.year {
+	color: #000;
+}
+
+a .school {
+	width: 100px;
+}
+
